@@ -184,7 +184,8 @@ collating order than the starting point.</dd>
 <dt><tt>REG_ERANGE</tt></dt>
 <dd>Out of memory.</dd>
 <dt><tt>REG_BADRPT</tt></dt>
-<dd>Invalid use of repetition operator.  TRE never returns this.</dd>
+<dd>Invalid use of repetition operators: two or more repetition operators have
+been chained in an undefined way.</dd>
 </dl>
 </blockquote>
 
